# Genz-analysis-backend

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1a969288b598_.py  27f99a3bfaa3_.py  653d409d2819_.py  d58b08a56286_.py  ea20fd7e7053_.py
api/: sentences_analysis.py
api/utils/: crud.py
db/: db_setup.py
db/models/: model.py  sentence_analysis.py
pydantic_schemas/: sentence_analysis.py
