[tool.poetry]
name = "genz-backend-project"
version = "0.1.0"
description = ""
authors = ["Youmari"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.37"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.0"
graphene = "^3.1"
strawberry-graphql = {extras = ["debug-server"], version = "^0.114.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
